[gd_scene load_steps=15 format=3 uid="uid://ddfmtots6188d"]

[ext_resource type="Script" path="res://Scenes/Main/main_menu.gd" id="1_00n02"]
[ext_resource type="TileSet" uid="uid://cx3lf2a1uoeoy" path="res://Assets/Tileset/RoomTileSet.tres" id="1_vvh3n"]
[ext_resource type="PackedScene" uid="uid://b3sxr0ie002dn" path="res://Scenes/NPC/npc_shooting_enemy.tscn" id="2_17aji"]
[ext_resource type="PackedScene" uid="uid://b1bse167pj3hn" path="res://Scenes/NPC/npc_basic_enemy.tscn" id="3_k52fb"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="5_os5eq"]
[ext_resource type="Theme" uid="uid://ed8xs2mqvcga" path="res://Assets/UI/MenuTheme.tres" id="6_1glru"]
[ext_resource type="FontFile" uid="uid://yv0f1wvan643" path="res://Assets/UI/INVASION2000.TTF" id="7_8xa44"]
[ext_resource type="PackedScene" uid="uid://b6krd8betivbv" path="res://Scenes/UI/settings.tscn" id="8_4tem5"]
[ext_resource type="AudioStream" uid="uid://cj8gk2xy0lv2k" path="res://Assets/Sounds/ButtonPress.wav" id="9_f72qx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ee2u2"]
shader = ExtResource("5_os5eq")
shader_parameter/lod = 1.07143

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_26bj0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kq1me"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jposd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oljqf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_00n02")
camera_max_right_position = 450.0
camera_max_left_position = -200.0
camera_max_up_position = -150.0
camera_max_down_position = 200.0
camera_move_speed = 25.0

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-457, -331)
tile_set = ExtResource("1_vvh3n")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(196607, 2228225, 1, 262143, 2228225, 1, 327679, 2228225, 1, 393215, 2228225, 1, 458751, 2228225, 1, 524287, 2228225, 1, 589823, 2228225, 1, 655359, 2097153, 1, 720895, 2228225, 1, 786431, 2097153, 1, 851967, 2228225, 1, 917503, 2228225, 1, 131072, 2228225, 1, 196608, 2228225, 1, 262144, 2228225, 1, 327680, 2228225, 1, 393216, 2228225, 1, 458752, 2228225, 1, 524288, 2228225, 1, 589824, 2228225, 1, 655360, 2228225, 1, 720896, 2228225, 1, 786432, 2228225, 1, 851968, 2162689, 1, 131073, 2228225, 1, 196609, 2228225, 1, 262145, 2228225, 1, 327681, 2228225, 1, 393217, 2162689, 1, 458753, 2228225, 1, 524289, 2228225, 1, 589825, 2162689, 1, 655361, 2228225, 1, 720897, 2228225, 1, 786433, 2228225, 1, 851969, 2228225, 1, 131074, 2228225, 1, 196610, 2097153, 1, 262146, 2097153, 1, 327682, 2228225, 1, 393218, 2228225, 1, 458754, 2228225, 1, 524290, 2228225, 1, 589826, 2228225, 1, 655362, 2228225, 1, 720898, 2228225, 1, 786434, 2228225, 1, 851970, 2228225, 1, 131075, 2228225, 1, 196611, 2228225, 1, 262147, 2228225, 1, 327683, 2228225, 1, 393219, 2228225, 1, 458755, 2162689, 1, 524291, 2228225, 1, 589827, 2228225, 1, 655363, 2228225, 1, 720899, 2228225, 1, 786435, 2162689, 1, 851971, 2228225, 1, 131076, 2228225, 1, 196612, 2359297, 1, 262148, 2359297, 1, 327684, 2359297, 1, 393220, 2228225, 1, 458756, 2228225, 1, 524292, 2228225, 1, 589828, 2162689, 1, 655364, 2162689, 1, 720900, 2228225, 1, 786436, 2228225, 1, 851972, 2228225, 1, 917508, 2228225, 1, 131077, 2228225, 1, 196613, 2359297, 1, 262149, 2359297, 1, 327685, 2359297, 1, 393221, 2228225, 1, 458757, 2162689, 1, 524293, 2228225, 1, 589829, 2228225, 1, 655365, 2228225, 1, 720901, 2228225, 1, 786437, 2228225, 1, 851973, 2228225, 1, 917509, 2162689, 1, 393222, 2097153, 1, 458758, 2228225, 1, 524294, 2228225, 1, 589830, 2228225, 1, 655366, 2228225, 1, 720902, 2228225, 1, 786438, 2228225, 1, 851974, 2228225, 1, 917510, 2228225, 1, 983046, 2228225, 1, 393223, 2228225, 1, 458759, 2228225, 1, 524295, 2228225, 1, 589831, 2097153, 1, 655367, 2228225, 1, 720903, 2228225, 1, 786439, 2097153, 1, 851975, 2228225, 1, 917511, 2228225, 1, 983047, 2228225, 1, 393224, 2228225, 1, 458760, 2097153, 1, 524296, 2228225, 1, 589832, 2228225, 1, 655368, 2228225, 1, 720904, 2228225, 1, 786440, 2162689, 1, 851976, 2228225, 1, 917512, 2228225, 1, 983048, 2228225, 1, 1048584, 2228225, 1, 393225, 2228225, 1, 458761, 2359297, 1, 524297, 2228225, 1, 589833, 2228225, 1, 655369, 2228225, 1, 720905, 2228225, 1, 786441, 2228225, 1, 851977, 2228225, 1, 917513, 2228225, 1, 983049, 2228225, 1, 1048585, 2228225, 1, 393226, 2228225, 1, 458762, 2359297, 1, 524298, 2359297, 1, 589834, 2097153, 1, 655370, 2228225, 1, 720906, 2097153, 1, 786442, 2162689, 1, 851978, 2228225, 1, 917514, 2228225, 1, 983050, 2228225, 1, 1048586, 2228225, 1, 589835, 2228225, 1, 655371, 2228225, 1, 720907, 2228225, 1, 786443, 2228225, 1, 851979, 2228225, 1, 917515, 2228225, 1, 983051, 2228225, 1, 1048587, 2228225, 1, 589836, 2228225, 1, 655372, 2228225, 1, 720908, 2228225, 1, 786444, 2228225, 1, 851980, 2097153, 1, 917516, 2228225, 1, 983052, 2228225, 1, 1048588, 2228225, 1, 589837, 2228225, 1, 655373, 2228225, 1, 720909, 2228225, 1, 786445, 2228225, 1, 851981, 2228225, 1, 917517, 2228225, 1, 983053, 2228225, 1, 1048589, 2228225, 1, 589838, 2228225, 1, 655374, 2228225, 1, 720910, 2228225, 1, 786446, 2228225, 1, 851982, 2228225, 1, 917518, 2228225, 1, 983054, 2228225, 1, 1048590, 2228225, 1, 589839, 2228225, 1, 655375, 2228225, 1, 720911, 2228225, 1, 786447, 2228225, 1, 851983, 2228225, 1, 917519, 2228225, 1, 983055, 2228225, 1, 1048591, 2228225, 1, 262160, 2228225, 1, 327696, 2228225, 1, 393232, 2228225, 1, 458768, 2228225, 1, 524304, 2228225, 1, 589840, 2228225, 1, 655376, 2228225, 1, 720912, 2228225, 1, 786448, 2097153, 1, 851984, 2228225, 1, 917520, 2228225, 1, 983056, 2359297, 1, 1048592, 2228225, 1, 262161, 2228225, 1, 327697, 2228225, 1, 393233, 2228225, 1, 458769, 2097153, 1, 524305, 2228225, 1, 589841, 2228225, 1, 655377, 2228225, 1, 720913, 2228225, 1, 786449, 2228225, 1, 851985, 2228225, 1, 917521, 2228225, 1, 983057, 2359297, 1, 1048593, 2359297, 1, 1114129, 2228225, 1, 262162, 2228225, 1, 327698, 2228225, 1, 393234, 2162689, 1, 458770, 2228225, 1, 524306, 2228225, 1, 589842, 2228225, 1, 655378, 2228225, 1, 720914, 2228225, 1, 786450, 2228225, 1, 851986, 2228225, 1, 917522, 2228225, 1, 983058, 2359297, 1, 1048594, 2359297, 1, 1114130, 2162689, 1, 262163, 2228225, 1, 327699, 2228225, 1, 393235, 2228225, 1, 458771, 2228225, 1, 524307, 2228225, 1, 589843, 2228225, 1, 655379, 2228225, 1, 720915, 2228225, 1, 786451, 2228225, 1, 851987, 2228225, 1, 917523, 2228225, 1, 983059, 2359297, 1, 1048595, 2359297, 1, 1114131, 2228225, 1, 262164, 2228225, 1, 327700, 2228225, 1, 393236, 2228225, 1, 458772, 2228225, 1, 524308, 2228225, 1, 589844, 2228225, 1, 655380, 2228225, 1, 720916, 2228225, 1, 786452, 2228225, 1, 851988, 2228225, 1, 917524, 2228225, 1, 262165, 2228225, 1, 327701, 2228225, 1, 393237, 2228225, 1, 458773, 2228225, 1, 524309, 2228225, 1, 589845, 2228225, 1, 655381, 2228225, 1, 720917, 2228225, 1, 786453, 2228225, 1, 851989, 2228225, 1, 262166, 2228225, 1, 327702, 2162689, 1, 393238, 2228225, 1, 458774, 2228225, 1, 524310, 2228225, 1, 589846, 2097153, 1, 655382, 2228225, 1, 720918, 2228225, 1, 786454, 2228225, 1, 851990, 2228225, 1, 262167, 2228225, 1, 327703, 2228225, 1, 393239, 2228225, 1, 458775, 2228225, 1, 524311, 2162689, 1, 589847, 2228225, 1, 655383, 2228225, 1, 720919, 2228225, 1, 786455, 2228225, 1, 851991, 2097153, 1, 262168, 2228225, 1, 327704, 2228225, 1, 393240, 2228225, 1, 458776, 2228225, 1, 524312, 2228225, 1, 589848, 2228225, 1, 655384, 2228225, 1, 720920, 2228225, 1, 786456, 2228225, 1, 851992, 2097153, 1, 917528, 2162689, 1, 327705, 2228225, 1, 393241, 2359297, 1, 458777, 2359297, 1, 524313, 2228225, 1, 589849, 2097153, 1, 655385, 2228225, 1, 720921, 2228225, 1, 786457, 2228225, 1, 851993, 2228225, 1, 917529, 2228225, 1, 983065, 2359297, 1, 1048601, 2359297, 1, 1114137, 2228225, 1, 393242, 2228225, 1, 458778, 2359297, 1, 524314, 2359297, 1, 589850, 2228225, 1, 655386, 2228225, 1, 720922, 2228225, 1, 786458, 2228225, 1, 851994, 2228225, 1, 917530, 2228225, 1, 983066, 2228225, 1, 1048602, 2359297, 1, 1114138, 2359297, 1, 1179674, 2162689, 1, 458779, 2359297, 1, 524315, 2359297, 1, 589851, 2359297, 1, 655387, 2162689, 1, 720923, 2228225, 1, 786459, 2228225, 1, 851995, 2228225, 1, 917531, 2228225, 1, 983067, 2228225, 1, 1048603, 2228225, 1, 1114139, 2359297, 1, 1179675, 2359297, 1, 1245211, 2228225, 1, 851996, 2228225, 1, 917532, 2228225, 1, 983068, 2162689, 1, 1048604, 2228225, 1, 1114140, 2228225, 1, 1179676, 2359297, 1, 1245212, 2228225, 1, 851997, 2162689, 1, 917533, 2162689, 1, 983069, 2228225, 1, 1048605, 2228225, 1, 1114141, 2228225, 1, 1179677, 2228225, 1, 1245213, 2228225, 1, 851998, 2228225, 1, 917534, 2228225, 1, 983070, 2228225, 1, 1048606, 2097153, 1, 1114142, 2228225, 1, 1179678, 2097153, 1, 1245214, 2228225, 1, 917535, 2228225, 1, 983071, 2228225, 1, 1048607, 2228225, 1, 1114143, 2228225, 1, 1179679, 2228225, 1, 1245215, 2162689, 1, 917536, 2228225, 1, 983072, 2228225, 1, 1048608, 2228225, 1, 1114144, 2228225, 1, 1179680, 2228225, 1, 1245216, 2228225, 1, 917537, 2228225, 1, 983073, 2228225, 1, 1048609, 2228225, 1, 1114145, 2228225, 1, 1179681, 2228225, 1, 1245217, 2162689, 1, 917538, 2228225, 1, 983074, 2228225, 1, 1048610, 2228225, 1, 1114146, 2228225, 1, 1179682, 2228225, 1, 1245218, 2228225, 1, 917539, 2228225, 1, 983075, 2228225, 1, 1048611, 2228225, 1, 1114147, 2228225, 1, 1179683, 2228225, 1, 1245219, 2228225, 1, 917540, 2228225, 1, 983076, 2228225, 1, 1048612, 2228225, 1, 1114148, 2228225, 1, 1179684, 2228225, 1, 1245220, 2228225, 1, 917541, 2228225, 1, 983077, 2228225, 1, 1048613, 2228225, 1, 1114149, 2228225, 1, 1179685, 2228225, 1, 1245221, 2228225, 1, 196606, 2228225, 1, 262142, 2228225, 1, 327678, 2228225, 1, 393214, 2228225, 1, 458750, 2228225, 1, 524286, 2228225, 1, 589822, 2228225, 1, 655358, 2228225, 1, 720894, 2228225, 1, 786430, 2228225, 1, 851966, 2228225, 1, 917502, 2228225, 1, 1048583, 2228225, 1, 917525, 2293761, 1, 917526, 2359297, 1, 917527, 2293761, 1, 983064, 2359297, 2, 1048600, 2359297, 3, 983060, 2228225, 2, 1048596, 2228225, 3, 1114132, 2228225, 3, 1114136, 2359297, 3, 1179673, 2359297, 2, 1179672, 2293761, 3, 1179671, 2228225, 3, 1179670, 2359297, 1, 1179669, 2359297, 3, 1179668, 2293761, 3, 1114133, 2359297, 3, 1048597, 2359297, 3, 983061, 2359297, 3, 983062, 2359297, 1, 1048598, 2359297, 1, 1048599, 2228225, 3, 1114135, 2228225, 3, 983063, 2228225, 3, 1114134, 2359297, 1, 1179667, 2293761, 2, 1179666, 2293761, 2, 1179665, 2293761, 2, 1245210, 2359297, 2, 1245209, 2293761, 3, 1245208, 2293761, 3, 1245207, 2228225, 3, 1245206, 2359297, 1, 1245205, 2359297, 3, 1245201, 2293761, 3, 1245202, 2293761, 3, 1245203, 2293761, 3, 1245204, 2293761, 3, 1114128, 2359297, 2, 1114127, 2293761, 2, 1114126, 2293761, 2, 1114125, 2293761, 2, 1114124, 2228225, 2, 1114123, 2359297, 1, 1114122, 2359297, 1, 1114121, 2359297, 2, 1114120, 2293761, 2, 1114119, 2293761, 2, 1179664, 2293761, 3, 1245200, 2293761, 3, 1245199, 2293761, 3, 1179663, 2293761, 3, 1179662, 2293761, 3, 1245198, 2293761, 3, 1245197, 2293761, 3, 1179661, 2293761, 3, 1245196, 2228225, 3, 1245195, 2359297, 1, 1179659, 2359297, 1, 1179658, 2359297, 1, 1245194, 2359297, 1, 1179657, 2359297, 3, 1179656, 2293761, 3, 1179655, 2293761, 3, 1245191, 2293761, 3, 1245192, 2293761, 3, 1245193, 2359297, 3, 1179660, 2228225, 3, 1310742, 2359297, 1, 1376278, 2359297, 1, 1441814, 2359297, 1, 1310730, 2359297, 1, 1310731, 2359297, 1, 1376266, 2359297, 1, 1376267, 2359297, 1, 1441802, 2359297, 1, 1441803, 2359297, 1, 1376268, 2359297, 1, 1441804, 2359297, 1, 1376269, 2293761, 4, 1441805, 2359297, 1, 1376270, 2359297, 1, 1441806, 2359297, 1, 1376271, 2359297, 1, 1441807, 2359297, 1, 1376272, 2359297, 1, 1441808, 2359297, 1, 1441809, 2359297, 1, 1376273, 2359297, 1, 1441810, 2359297, 1, 1376274, 2359297, 1, 1441811, 2293761, 1, 1376275, 2359297, 1, 1441812, 2359297, 1, 1376276, 2359297, 1, 1441813, 2359297, 1, 1376277, 2359297, 1, 1310743, 2228225, 3, 1310744, 2293761, 3, 1310745, 2293761, 3, 1310746, 2293761, 3, 1310741, 2359297, 3, 1310740, 2293761, 3, 1310739, 2293761, 3, 1310738, 2293761, 3, 1310737, 2293761, 3, 1310736, 2293761, 3, 1310735, 2293761, 3, 1310733, 2293761, 3, 1310734, 2293761, 3, 1310732, 2228225, 3, 1310729, 2359297, 3, 1310728, 2293761, 3, 1310727, 2293761, 3, 1376263, 2293761, 3, 1376264, 2359297, 3, 1441800, 2359297, 3, 1441801, 2359297, 1, 1376265, 2359297, 1, 1441799, 2293761, 3, 1507335, 2293761, 3, 1507336, 2359297, 3, 1507337, 2359297, 1, 1507338, 2359297, 1, 1507339, 2359297, 1, 1507340, 2359297, 1, 1507341, 2359297, 1, 1507342, 2359297, 1, 1507343, 2359297, 1, 1507344, 2359297, 1, 1507345, 2359297, 1, 1507346, 2359297, 1, 1507347, 2359297, 1, 1507348, 2359297, 1, 1507349, 2359297, 1, 1507350, 2359297, 1, 1507351, 2359297, 1, 1441815, 2359297, 1, 1376279, 2359297, 1, 1376280, 2228225, 3, 1376281, 2293761, 3, 1376282, 2293761, 3, 1441818, 2293761, 3, 1441817, 2293761, 3, 1507353, 2293761, 3, 1507352, 2228225, 3, 1441816, 2228225, 3, 1507354, 2293761, 3, 1572888, 2293761, 3, 1572889, 2293761, 3, 1572890, 2293761, 3, 1572887, 2293761, 2, 1572886, 2293761, 2, 1572885, 2293761, 2, 1572884, 2293761, 2, 1572883, 2293761, 2, 1572882, 2293761, 2, 1572881, 2293761, 2, 1572880, 2293761, 2, 1572879, 2293761, 2, 1572878, 2293761, 2, 1572877, 2293761, 2, 1572876, 2293761, 2, 1572875, 2293761, 2, 1572874, 2293761, 2, 1572873, 2293761, 2, 1572872, 2293761, 3, 1572871, 2293761, 3, 1638407, 2293761, 3, 1638408, 2293761, 3, 1638409, 2293761, 3, 1638410, 2293761, 3, 1638411, 2293761, 3, 1638412, 2293761, 3, 1638413, 2293761, 3, 1638414, 2293761, 3, 1638415, 2293761, 3, 1638416, 2293761, 3, 1638417, 2293761, 3, 1638418, 2293761, 3, 1638419, 2293761, 3, 1638420, 2293761, 3, 1638421, 2293761, 3, 1638422, 2293761, 3, 1638423, 2293761, 3, 1638424, 2293761, 3, 1638425, 2293761, 3, 1638426, 2293761, 3)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(131074, 327681, 0, 131075, 327681, 0, 131076, 327681, 0, 131077, 524289, 0, 393226, 589825, 1, 458762, 589825, 2, 524298, 589825, 2, 589835, 327681, 0, 589836, 327681, 0, 589837, 327681, 0, 589838, 327681, 0, 589839, 327681, 0, 589840, 131073, 1, 524304, 65537, 2, 458768, 65537, 2, 393232, 65537, 2, 327696, 65537, 2, 262160, 65537, 1, 262161, 327681, 0, 262162, 327681, 0, 262163, 327681, 0, 262164, 327681, 0, 262165, 327681, 0, 262166, 327681, 0, 262167, 327681, 0, 262168, 524289, 0, 851998, 524289, 0, 917535, 327681, 0, 917536, 327681, 0, 917537, 327681, 0, 917538, 327681, 0, 917539, 327681, 0, 1245219, 327681, 0, 1245218, 327681, 0, 1245217, 327681, 0, 1245216, 327681, 0, 1245215, 327681, 0, 1245214, 327681, 0, 1245213, 327681, 0, 1245212, 327681, 0, 1245211, 65537, 7, 1114131, 524289, 10, 1114130, 327681, 0, 1114129, 131073, 10, 1048593, 131073, 9, 1048592, 327681, 0, 1048591, 327681, 0, 1048590, 327681, 0, 1048589, 327681, 0, 1048588, 327681, 0, 1048587, 327681, 0, 1048586, 327681, 0, 1048585, 327681, 0, 1048584, 327681, 0, 1048583, 65537, 6, 983047, 131073, 9, 983046, 131073, 10, 917510, 131073, 9, 917509, 327681, 0, 917508, 131073, 10, 851972, 131073, 9, 851971, 327681, 0, 851970, 327681, 0, 851969, 327681, 0, 851968, 327681, 0, 917503, 327681, 0, 131073, 327681, 0, 131072, 327681, 0, 196607, 327681, 0, 917540, 327681, 0, 917541, 524289, 0, 1245220, 327681, 0, 1245221, 524289, 10, 917502, 65537, 9, 196606, 65537, 1, 262142, 65537, 2, 327678, 65537, 2, 393214, 65537, 2, 458750, 65537, 2, 524286, 65537, 2, 589822, 65537, 2, 655358, 65537, 2, 720894, 65537, 2, 786430, 65537, 2, 851966, 65537, 2, 983077, 589825, 2, 1048613, 589825, 2, 1114149, 589825, 2, 1179685, 589825, 2, 1048595, 589825, 2, 983059, 589825, 2, 917524, 524289, 10, 851988, 524289, 9, 851989, 327681, 0, 851990, 327681, 0, 851991, 327681, 0, 917528, 131073, 10, 983065, 65537, 2, 1048601, 65537, 2, 1114137, 131073, 10, 1179674, 131073, 10, 786461, 524289, 0, 393242, 327681, 0, 327705, 524289, 0, 393219, 786433, 3, 393220, 327681, 0, 393221, 589825, 5, 393222, 327681, 0, 393223, 327681, 0, 393224, 327681, 0, 393225, 327681, 0, 327685, 589825, 2, 262149, 589825, 2, 196613, 589825, 2, 589834, 524289, 1, 1179675, 131073, 9, 1114138, 131073, 9, 917529, 131073, 9, 851992, 131073, 9, 917523, 524289, 9, 917534, 524289, 1, 851997, 524289, 1, 786459, 524289, 1, 458779, 589825, 2, 524315, 589825, 2, 589851, 589825, 2, 655387, 589825, 2, 720923, 589825, 2, 786460, 327681, 10, 393243, 524289, 0, 327704, 524289, 1, 393241, 524289, 1, 458757, 589825, 3, 1703962, 524289, 10, 1703961, 327681, 0, 1703960, 327681, 0, 1703959, 327681, 0, 1703958, 327681, 0, 1703957, 327681, 0, 1703956, 327681, 0, 1703955, 327681, 0, 1703954, 327681, 0, 1703953, 327681, 0, 1703952, 327681, 0, 1703951, 327681, 0, 1703950, 327681, 0, 1703949, 327681, 0, 1703948, 327681, 0, 1703947, 327681, 0, 1703946, 327681, 0, 1703945, 327681, 0, 1703944, 327681, 0, 1703943, 131073, 10, 1114119, 65537, 2, 1179655, 65537, 2, 1245191, 65537, 2, 1310727, 65537, 2, 1376263, 65537, 2, 1441799, 65537, 2, 1507335, 65537, 2, 1572871, 65537, 2, 1638407, 65537, 2, 1638426, 589825, 2, 1572890, 589825, 2, 1507354, 589825, 2, 1441818, 589825, 2, 1376282, 589825, 2, 1310746, 589825, 2, 1245210, 524289, 9)
layer_2/name = "Props"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(589835, 3, 6, 655371, 3, 7, 262165, 3, 6, 327701, 3, 7, 786460, 3, 6, 851996, 3, 7, 393225, 3, 8, 458761, 3, 9, 393224, 3, 8, 458760, 3, 9, 327697, 3, 2, 655373, 3, 2, 917533, 3, 2, 262164, 458755, 0, 393223, 458755, 0, 589836, 458755, 0, 589838, 3, 4, 589839, 65539, 4, 393222, 851971, 0, 589837, 851971, 0, 262161, 851971, 0, 262167, 851971, 0, 393242, 851971, 0, 393219, 851971, 0, 851971, 851971, 0, 131076, 851971, 0, 196607, 851971, 0, 917503, 851971, 0, 1114129, 851971, 0, 1114131, 851971, 0, 1245212, 851971, 0, 1245220, 851971, 0, 917540, 851971, 0, 917535, 851971, 0, 851991, 851971, 0, 851989, 851971, 0, 1048591, 851971, 0, 1048584, 851971, 0, 524297, 3, 1, 655363, 3, 1, 1048594, 3, 10, 524314, 3, 1, 393235, 65539, 1, 720919, 65539, 1, 917512, 65539, 1, 655375, 65539, 1, 655372, 65539, 0, 458762, 65539, 0, 327702, 3, 11, 327696, 3, 0, 458756, 720899, 8, 655359, 720899, 8, 196611, 720899, 8, 983054, 720899, 8, 327704, 720899, 8, 1179679, 786435, 8, 524306, 786435, 8, 786445, 786435, 8, 589833, 786435, 8, 262163, 3, 17, 851990, 3, 18, 1048586, 3, 12, 1048587, 65539, 12, 917537, 3, 13, 917538, 65539, 13, 131073, 3, 13, 131074, 65539, 13, 262166, 3, 10, 983052, 3, 10, 983053, 3, 10, 983055, 3, 8, 983056, 3, 6, 327703, 720899, 6, 983048, 720899, 6, 131072, 3, 6, 196608, 3, 7, 458755, 3, 2, 196612, 65539, 1, 524287, 65539, 1, 262143, 3, 0, 1179684, 3, 10, 1179683, 3, 10, 1179682, 3, 10, 917539, 3, 6, 983075, 3, 7, 983076, 3, 2, 917536, 458755, 0, 131075, 458755, 0, 1376271, 3, 2, 1310737, 3, 6, 1376273, 3, 7, 1310738, 3, 6, 1376274, 3, 7)

[node name="Entities" type="Node2D" parent="."]
position = Vector2(-457, -331)

[node name="NPC Basic Enemy" parent="Entities" instance=ExtResource("2_17aji")]
position = Vector2(66, 177)

[node name="NPC Basic Enemy2" parent="Entities" instance=ExtResource("2_17aji")]
position = Vector2(194, 364)

[node name="NPC Basic Enemy11" parent="Entities" node_paths=PackedStringArray("sprite", "animation_player", "collision_shape", "state_machine") instance=ExtResource("2_17aji")]
position = Vector2(690, 712)
sprite = NodePath("../NPC Basic Enemy2/Sprite2D")
animation_player = NodePath("../NPC Basic Enemy2/AnimationPlayer")
collision_shape = NodePath("../NPC Basic Enemy2/CollisionShape2D")
state_machine = NodePath("../NPC Basic Enemy2/EnemyStateMachine")

[node name="NPC Basic Enemy3" parent="Entities" instance=ExtResource("3_k52fb")]
position = Vector2(594, 229)

[node name="NPC Basic Enemy4" parent="Entities" instance=ExtResource("2_17aji")]
position = Vector2(862, 472)

[node name="NPC Basic Enemy13" parent="Entities" node_paths=PackedStringArray("sprite", "animation_player", "collision_shape", "state_machine") instance=ExtResource("2_17aji")]
position = Vector2(644, 347)
sprite = NodePath("../NPC Basic Enemy4/Sprite2D")
animation_player = NodePath("../NPC Basic Enemy4/AnimationPlayer")
collision_shape = NodePath("../NPC Basic Enemy4/CollisionShape2D")
state_machine = NodePath("../NPC Basic Enemy4/EnemyStateMachine")

[node name="NPC Basic Enemy5" parent="Entities" instance=ExtResource("2_17aji")]
position = Vector2(1050, 552)

[node name="NPC Basic Enemy6" parent="Entities" instance=ExtResource("3_k52fb")]
position = Vector2(352, 418)

[node name="NPC Basic Enemy10" parent="Entities" node_paths=PackedStringArray("sprite", "animation_player", "collision_shape", "state_machine") instance=ExtResource("3_k52fb")]
position = Vector2(343, 681)
sprite = NodePath("../NPC Basic Enemy6/Sprite2D")
animation_player = NodePath("../NPC Basic Enemy6/AnimationPlayer")
collision_shape = NodePath("../NPC Basic Enemy6/CollisionShape2D")
state_machine = NodePath("../NPC Basic Enemy6/EnemyStateMachine")

[node name="NPC Basic Enemy12" parent="Entities" node_paths=PackedStringArray("sprite", "animation_player", "collision_shape", "state_machine") instance=ExtResource("3_k52fb")]
position = Vector2(-5, 336)
sprite = NodePath("../NPC Basic Enemy6/Sprite2D")
animation_player = NodePath("../NPC Basic Enemy6/AnimationPlayer")
collision_shape = NodePath("../NPC Basic Enemy6/CollisionShape2D")
state_machine = NodePath("../NPC Basic Enemy6/EnemyStateMachine")

[node name="NPC Basic Enemy7" parent="Entities" instance=ExtResource("3_k52fb")]
position = Vector2(215, 244)

[node name="NPC Basic Enemy8" parent="Entities" instance=ExtResource("3_k52fb")]
position = Vector2(799, 299)

[node name="NPC Basic Enemy9" parent="Entities" instance=ExtResource("3_k52fb")]
position = Vector2(539, 456)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_ee2u2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme = ExtResource("6_1glru")
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_8xa44")
theme_override_font_sizes/font_size = 75
text = "Idle Mech Dungeon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MainMenu/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 25

[node name="PlayButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_26bj0")
text = "Play"

[node name="ScoresButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_kq1me")
text = "Scores"

[node name="SettingsButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_jposd")
text = "Settings"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MainMenu/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 25

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_oljqf")
text = "Quit"

[node name="Settings" parent="CanvasLayer" instance=ExtResource("8_4tem5")]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_f72qx")
bus = &"Sounds"

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/ScoresButton" to="." method="_on_scores_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="button_pressed" from="CanvasLayer/Settings" to="." method="_on_inside_settings_button_pressed"]
